# contract-plugin

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.linux_amd64  Dockerfile.linux_arm64  README.md
.github/workflows/: build.yml  compile_and_test.yml
docker/linux/amd64/: Dockerfile
docker/linux/arm64/: Dockerfile
src/: aelf_options.pb.cc  aelf_options.pb.h  config.h  config_protobuf.h  contract_csharp_generator.cc  contract_csharp_generator.h  contract_csharp_generator_helpers.h  contract_csharp_plugin.cc  generator_helpers.h
